--- a/Comgr.CourseProject/Comgr.CourseProject.UI/App.xaml
+++ b/Comgr.CourseProject/Comgr.CourseProject.UI/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Comgr.CourseProject.UI"
-             StartupUri="MainWindow.xaml">
+             StartupUri="PartAWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
