try fix specular phong bug

--- a/Comgr.CourseProject/Comgr.CourseProject.UI/PartBWindow.xaml
+++ b/Comgr.CourseProject/Comgr.CourseProject.UI/PartBWindow.xaml
@@ -20,17 +20,17 @@
             <TextBlock Text="DiffuseLambert" Margin="0,5,0,0"/>
             <TextBox x:Name="DiffuseLambert" Text="True" />
             <TextBlock Text="SpecularPhong" Margin="0,5,0,0"/>
-            <TextBox x:Name="SpecularPhong" Text="False" />
+            <TextBox x:Name="SpecularPhong" Text="True" />
             <TextBlock Text="SpecularPhongFactor" Margin="0,5,0,0"/>
             <TextBox x:Name="SpecularPhongFactor" Text="100" />
             <TextBlock Text="Z-Buffer" Margin="0,5,0,0"/>
             <TextBox x:Name="ZBuffer" Text="False" />
             <TextBlock Text="TextureIndex (-1 = no, 0, 1 or 2)" Margin="0,5,0,0"/>
-            <TextBox x:Name="TextureIndex" Text="-1" />
+            <TextBox x:Name="TextureIndex" Text="2" />
             <TextBlock Text="BilinearFilter" Margin="0,5,0,0"/>
             <TextBox x:Name="BilinearFilter" Text="False" />
             <TextBlock Text="GammaCorrect" Margin="0,5,0,0"/>
-            <TextBox x:Name="GammaCorrect" Text="False" />
+            <TextBox x:Name="GammaCorrect" Text="True" />
             <TextBlock x:Name="Status" Text="Status: Ready" Margin="0,15,0,0"  VerticalAlignment="Center" />
             <StackPanel Margin="0,5,0,0" Orientation="Horizontal">
                 <Button x:Name="Start" Content="Start" Margin="0,0,5,0" />
