--- a/Comgr.CourseProject/Comgr.CourseProject.UI/PartBWindow.xaml
+++ b/Comgr.CourseProject/Comgr.CourseProject.UI/PartBWindow.xaml
@@ -25,7 +25,7 @@
             <TextBox x:Name="SpecularPhongFactor" Text="200" />
             <TextBlock Text="Z-Buffer" Margin="0,5,0,0"/>
             <TextBox x:Name="ZBuffer" Text="False" />
-            <TextBlock Text="TextureIndex (-1 = no, 0, 1 or 2)" Margin="0,5,0,0"/>
+            <TextBlock Text="TextureIndex (-1 = no, 0 ... 3)" Margin="0,5,0,0"/>
             <TextBox x:Name="TextureIndex" Text="2" />
             <TextBlock Text="BilinearFilter" Margin="0,5,0,0"/>
             <TextBox x:Name="BilinearFilter" Text="False" />
